# pivota-payments-platform

./: .gitignore  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  migrate.yml
app/: lifespan.py  main.py
app/config/: celery.py  database.py  redis.py  settings.py
app/core/: events.py  exceptions.py  idempotency.py  logging.py  money.py
app/db/: base.py  mixins.py  roles.sql  session.py
app/domains/accounts/: router.py
app/domains/ai/: router.py
app/domains/analytics/: router.py
app/domains/auth/: router.py
app/domains/compliance/: router.py
app/domains/ingest/: router.py
app/domains/notifications/: router.py
app/domains/reports/: router.py
app/domains/transactions/: enums.py  router.py
app/domains/users/: router.py
app/middleware/: auth.py  request_id.py  security_headers.py
app/workers/: analytics_tasks.py  compliance_tasks.py  dlq_tasks.py  ingest_tasks.py  notification_tasks.py  report_tasks.py
backend/: .gitignore  main.py  requirements.txt
docker/: .env.example  Dockerfile  Dockerfile.worker  docker-compose.yml
docs/: EXECUTION_PLAN.md  FRONTEND_INTEGRATION.md  REPO_STRUCTURE.md  STACK.md
migrations/: env.py
scripts/: create_db_roles.py  replay_dlq.py  seed_dev_data.py
tests/: conftest.py
tests/core/: test_idempotency.py  test_money.py
