[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pivota-backend"
version = "0.1.0"
description = "Pivota fintech backend — MTN MoMo ingestion, analytics, AI chatbot, compliance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.3",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "pyotp>=2.9",
    "structlog>=24",
    "boto3>=1.34",
    "sendgrid>=6.11",
    "firebase-admin>=6.5",
    "langchain>=0.2",
    "langchain-anthropic>=0.1",
    "anthropic>=0.28",
    "pgvector>=0.3",
    "pandas>=2.2",
    "weasyprint>=61",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "fakeredis>=2.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
